--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First GitHub Website</title>
+    <title>Pokédex</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Site!</h1>
-    <p>This is a simple webpage hosted using GitHub Pages.</p>
+    <h1>Pokédex</h1>
+    <input type="text" id="pokemonName" placeholder="Enter Pokémon name">
+    <button onclick="fetchPokemon()">Search</button>
+    <div id="result"></div>
+
+    <script>
+        async function fetchPokemon() {
+            const name = document.getElementById("pokemonName").value.toLowerCase();
+            const url = `https://pokeapi.co/api/v2/pokemon/${name}`;
+
+            try {
+                const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error("Pokémon not found!");
+                }
+                const data = await response.json();
+                
+                document.getElementById("result").innerHTML = `
+                    <h2>${data.name.toUpperCase()}</h2>
+                    <img src="${data.sprites.front_default}" alt="${data.name}">
+                    <p>Type: ${data.types.map(t => t.type.name).join(", ")}</p>
+                    <p>Height: ${data.height}</p>
+                    <p>Weight: ${data.weight}</p>
+                `;
+            } catch (error) {
+                document.getElementById("result").innerHTML = `<p style="color: red;">${error.message}</p>`;
+            }
+        }
+    </script>
 </body>
 </html>
