--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Pokédex</h1>
@@ -11,29 +12,6 @@
     <button onclick="fetchPokemon()">Search</button>
     <div id="result"></div>
 
-    <script>
-        async function fetchPokemon() {
-            const name = document.getElementById("pokemonName").value.toLowerCase();
-            const url = `https://pokeapi.co/api/v2/pokemon/${name}`;
-
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error("Pokémon not found!");
-                }
-                const data = await response.json();
-                
-                document.getElementById("result").innerHTML = `
-                    <h2>${data.name.toUpperCase()}</h2>
-                    <img src="${data.sprites.front_default}" alt="${data.name}">
-                    <p>Type: ${data.types.map(t => t.type.name).join(", ")}</p>
-                    <p>Height: ${data.height}</p>
-                    <p>Weight: ${data.weight}</p>
-                `;
-            } catch (error) {
-                document.getElementById("result").innerHTML = `<p style="color: red;">${error.message}</p>`;
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
